--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,8 @@
+@import "global/fonts.scss";
+@import "global/normalize.scss";
 @import "variables.scss";
 @import "mixins.scss";
 @import "global/base.scss";
-@import "blocks/index-page.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-menu.scss";
 @import "blocks/logo-plain.scss";
