--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -22,9 +22,7 @@ $btn-main-bg: #2aab6d;
 $html-size-base: 10px;
 $font-size:1.4rem;
 $line-height:2.4rem;
-$font-family: "Open Sans",
-Arial,
-sans-serif;
+$font-family: "OpenSans", Arial, sans-serif;
 
 /**/
 
