--- a/sass/blocks/downloads.scss
+++ b/sass/blocks/downloads.scss
@@ -1,66 +1,84 @@
 .downloads {
   background-color: $color-main-dark;
-  &__inner {
-    @include container;
-    padding-top: 28px;
-    padding-bottom: 35px;
-    /**/
-    outline: 1px dashed white;
-  }
-  &__btn {
+}
+
+.downloads__inner {
+  @include container;
+  padding-top: 28px;
+  padding-bottom: 35px;
+  /**/
+  outline: 1px dashed white;
+}
+
+.downloads__btn {
+  display: block;
+  width: 274px;
+  padding-top: 15px;
+  padding-bottom: 16px;
+  margin-bottom: 32px;
+  font-family: $font-family;
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 1.8rem;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  border: 3px solid #ffffff;
+  border-radius: 28px;
+}
+
+.downloads__icons {
+  height: 57px;
+  width: 206px;
+  margin-bottom: 27px;
+  padding-left: 37px;
+  padding-right: 37px;
+  line-height: 57px;
+  font-size: 0;
+}
+
+.downloads__icon {
+  display: inline-block;
+  vertical-align: middle;
+  /**/
+  background: orange;
+  opacity: 0.3;
+  outline: 1px solid white;
+  
+  a {
     display: block;
-    width: 274px;
-    padding-top: 15px;
-    padding-bottom: 16px;
-    margin-bottom: 32px;
-    font-family: $font-family;
-    font-size: 1.8rem;
-    font-weight: 700;
-    line-height: 1.8rem;
-    text-align: center;
-    color: #ffffff;
-    text-decoration: none;
-    border: 3px solid #ffffff;
-    border-radius: 28px;
   }
-  &__icons {
-    height: 57px;
-    width: 206px;
-    margin-bottom: 27px;
-    padding-left: 37px;
-    padding-right: 37px;
-    line-height: 57px;
-    font-size: 0;
-  }
-  &__icon {
-    display: inline-block;
-    vertical-align: middle;
-    /**/
-    background: orange;
-    opacity: 0.3;
-    outline: 1px solid white;
-    &--apple {
+  
+  &--apple {
+    margin-right: 35px;
+    a {
       width: 47px;
       height: 57px;
-      margin-right: 35px;
     }
-    &--android {
+  }
+  
+  &--android {
+    margin-right: 37px;
+    a {
       width: 37px;
       height: 47px;
-      margin-right: 37px;
     }
-    &--win {
+  }
+  
+  &--win {
+    a {
       height: 41px;
       width: 44px;
     }
   }
-  &__info {
-    padding-left: 10px;
-    padding-right: 10px;
-    text-align: center;
-    font-size: $font-size;
-    line-height: $line-height;
-    font-weight: 300;
-    color: #ffffff;
-  }
+}
+
+.downloads__info {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+  font-size: $font-size;
+  line-height: $line-height;
+  font-weight: 300;
+  color: #ffffff;
 }
