--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -1,22 +1,31 @@
 .page-header {
   min-width: $screen-sm;
   margin: 0 auto;
-  &__bg-img {
-    position: relative;
-    height: 458px;
-    background-color: #2b3b4b;
-    /**/
-    outline: 1px solid yellow;
-  }
-  &__img {
-    height: 392px;
-    width: $screen-sm;
-    margin: 0 auto;
-    /**/
-    outline: 1px solid white;
-    background: yellow;
-    opacity: 0.1;
-  }
+  background-color: #2c394a;
   /**/
-  outline:2px dotted yellow;
+outline: 2px dotted yellow;
+}
+
+.page-header__img {
+  height: 392px;
+  width: $screen-sm;
+  margin: 0 auto;
+  /**/
+  outline: 1px solid red;
+  background: yellow;
+  opacity: 0.5;
+}
+
+.page-header__title-wrapper {
+  @include container;
+  height: 171px;
+}
+
+.page-header__title {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 24px;
+  font-weight: 300;
+  text-align: center;
+  color: #ffffff;
 }
