--- a/sass/global/base.scss
+++ b/sass/global/base.scss
@@ -1,3 +1,10 @@
-html{
+html {
   font-size: $html-size-base;
+}
+
+.page {
+  min-width: $screen-sm;
+  font-family: $font-family;
+  font-size: $font-size;
+  line-height: $line-height;
 }
