Верстка photo.html, главное меню - js

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,3 +12,13 @@
 @import "blocks/slider.scss";
 @import "blocks/price.scss";
 @import "blocks/contacts.scss";
+@import "blocks/user-post.scss";
+@import "blocks/page-photo.scss";
+@import "blocks/new-photo.scss";
+@import "blocks/user-photos.scss";
+@import "blocks/logo-pict.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/socials.scss";
+@import "blocks/proc-photo.scss";
+/**/
+@import "global/temp.scss";
