--- a/sass/blocks/main-menu.scss
+++ b/sass/blocks/main-menu.scss
@@ -1,17 +1,59 @@
 .main-menu {
   
-  &--closed {
+  &--opened {
     .main-menu__items {
-      display: none;
+      display: block;
     }
+    .main-menu__top {
+      position: relative;
+      height: 69px;
+      margin-bottom: 30px;
+      background-color: $color-main;
+      box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 1);
+    }
+  }
+  
+}
+
+.main-menu__items {
+  display: none;
+  position: absolute;
+  top: 70px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  font-family: $font-family;
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 3.2rem;
+  color: #ffffff;
+  background-color: $color-main;
+  text-transform: uppercase;
+  list-style: none;
+  a {
+    color: #ffffff;
+    text-decoration: none;
+  }
+  z-index: 100;
+}
+
+.main-menu__item {
+  margin-bottom: 1px;
+  text-align: center;
+  box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.15), 0px 1px 0px 0px rgba(0, 0, 0, 1);
+  a {
+    @include container;
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    min-height: 63px;
+    line-height: 63px;
   }
 }
 
 .main-menu__top {
   height: 66px;
   background-color: rgba(0, 0, 0, 0.3);
-  /**/
-  outline: 1px dashed red;
 }
 
 .main-menu__top-inner {
