--- a/sass/global/base.scss
+++ b/sass/global/base.scss
@@ -7,4 +7,14 @@ html {
   font-family: $font-family;
   font-size: $font-size;
   line-height: $line-height;
+  color:$color-main;
+}
+
+.btn-like{
+  width: 13px;
+  height: 12px;
+  font-size: 0;
+  outline: none;
+  border: none;
+  background-color: red;
 }
