--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,12 +13,17 @@
 @import "blocks/price.scss";
 @import "blocks/contacts.scss";
 @import "blocks/user-post.scss";
-@import "blocks/page-photo.scss";
 @import "blocks/new-photo.scss";
 @import "blocks/user-photos.scss";
 @import "blocks/logo-pict.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/socials.scss";
 @import "blocks/proc-photo.scss";
+@import "blocks/contest.scss";
+@import "blocks/userinfo-contest.scss";
+@import "blocks/achieve-contest.scss";
+@import "blocks/app-contest.scss";
+@import "blocks/usertext-contest.scss";
+@import "blocks/contest-popup.scss";
 /**/
 @import "global/temp.scss";
