--- a/sass/blocks/user-post.scss
+++ b/sass/blocks/user-post.scss
@@ -1,3 +1,23 @@
+
+.user-post {
+  padding-bottom: 26px;
+  margin-bottom: 20px;
+  background-color: $color-grey-light;
+  
+  &--best {
+    width: $screen-sm;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  &--regular {
+    @include container;
+  }
+}
+
+.user-post__info{
+    @include container;
+}
+
 .user-post__photo {
   width: 100%;
   height: 132px;
@@ -47,10 +67,16 @@
   line-height: 2.4rem;
 }
 
-.user-post__btn-like {
+.user-post__vote-like {
   display: inline-block;
   vertical-align: middle;
+  width: 13px;
+  height: 12px;
   margin-right: 19px;
+  font-size: 0;
+  outline: none;
+  border: none;
+  background-color: red;
 }
 
 .user-post__count-like {
