--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -1,21 +1,24 @@
 .page-footer {
-  padding-top: 40px;
+    padding-top: 40px;
 }
 
 .page-footer__logo {
-  margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .page-footer__socials {
-  margin-bottom: 39px;
+    margin-bottom: 39px;
 }
 
 .page-footer__credentials {
-  @include container;
-  text-align: center;
-  span,
-  .page-footer__credentials-logo {
+    text-align: center;
+
+    @include container;
+}
+
+.page-footer__credentials-text,
+.page-footer__credentials-logo {
     display: inline-block;
+
     vertical-align: middle;
-  }
 }
