--- a/sass/blocks/downloads.scss
+++ b/sass/blocks/downloads.scss
@@ -1,80 +1,94 @@
 .downloads {
-  background-color: $color-main-dark;
+    background-color: $color-main-dark;
 }
 
 .downloads__inner {
-  @include container;
-  padding-top: 28px;
-  padding-bottom: 35px;
-  /**/
-  outline: 1px dashed white;
+    padding-top: 28px;
+    padding-bottom: 35px;
+    /**/
+
+    outline: 1px dashed white;
+
+    @include container;
 }
 
 .downloads__btn {
-  display: block;
-  width: 274px;
-  padding-top: 15px;
-  padding-bottom: 16px;
-  margin-bottom: 32px;
-  font-family: $font-family;
-  font-size: 1.8rem;
-  font-weight: 700;
-  line-height: 1.8rem;
-  text-align: center;
-  color: #ffffff;
-  text-decoration: none;
-  border: 3px solid #ffffff;
-  border-radius: 28px;
+    font-family: $font-family;
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 1.8rem;
+
+    display: block;
+
+    width: 274px;
+    margin-bottom: 32px;
+    padding-top: 15px;
+    padding-bottom: 16px;
+
+    text-align: center;
+    text-decoration: none;
+
+    color: #fff;
+    border: 3px solid #fff;
+    border-radius: 28px;
 }
 
 .downloads__icons {
-  height: 57px;
-  width: 206px;
-  margin-bottom: 27px;
-  padding-left: 37px;
-  padding-right: 37px;
-  line-height: 57px;
-  font-size: 0;
+    font-size: 0;
+    line-height: 57px;
+
+    width: 206px;
+    height: 57px;
+    margin-bottom: 27px;
+    padding-right: 37px;
+    padding-left: 37px;
 }
 
 .downloads__icon {
-  display: inline-block;
-  vertical-align: middle;
-  
-  a {
-    display: block;
-  }
-  
-  &--apple {
-    margin-right: 35px;
+    display: inline-block;
+
+    vertical-align: middle;
+
     a {
-      width: 47px;
-      height: 57px;
+        display: block;
     }
-  }
-  
-  &--android {
-    margin-right: 37px;
-    a {
-      width: 37px;
-      height: 47px;
+
+    &--apple {
+        margin-right: 35px;
+
+        a {
+            width: 47px;
+            height: 57px;
+        }
     }
-  }
-  
-  &--win {
-    a {
-      height: 41px;
-      width: 44px;
+
+    &--android {
+        margin-right: 37px;
+
+        a {
+            width: 37px;
+            height: 47px;
+        }
     }
-  }
+
+    &--win {
+
+        a {
+            width: 44px;
+            height: 41px;
+        }
+    }
 }
 
 .downloads__info {
-  padding-left: 10px;
-  padding-right: 10px;
-  text-align: center;
-  font-size: $font-size;
-  line-height: $line-height;
-  font-weight: 300;
-  color: #ffffff;
+    font-size: $font-size;
+    font-weight: 300;
+    line-height: $line-height;
+
+    padding-right: 10px;
+    padding-left: 10px;
+
+    text-align: center;
+
+    color: #fff;
 }
