--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -1,33 +1,37 @@
 .page-header {
-  min-width: $screen-sm;
-  margin: 0 auto;
-  background-color: #2c394a;
-  /**/
-  outline: 2px dotted yellow;
+    min-width: $screen-sm;
+    margin: 0 auto;
+    /**/
+
+    outline: 2px dotted yellow;
+    background-color: #2c394a;
 }
 
 .page-header__img {
-  height: 392px;
-  width: $screen-sm;
-  margin: 0 auto;
-  /**/
-  outline: 1px solid red;
-  background: yellow;
-  opacity: 0.5;
+    width: $screen-sm;
+    height: 392px;
+    margin: 0 auto;
+
+    opacity: 0.5;
+    /**/
+    outline: 1px solid red;
+    background: yellow;
 }
 
 .page-header__title-wrapper {
-  @include container;
-  height: 171px;
+    height: 171px;
+
+    @include container;
 }
 
 .page-header__title {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 24px;
-  font-weight: 300;
-  text-align: center;
-  color: #ffffff;
+    font-size: 24px;
+    font-weight: 300;
+
+    display: inline-block;
+
+    text-align: center;
+    vertical-align: middle;
+
+    color: #fff;
 }
-
-
