--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,54 +1,59 @@
 .reviews {
-  padding-top: 45px;
-  margin-bottom: 133px;
-  background-color: #ffffff;
+    margin-bottom: 133px;
+    padding-top: 45px;
+
+    background-color: #fff;
 }
 
 .reviews__items {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
 }
 
 .reviews__item {
-  @include container;
-  text-align: center;
+    text-align: center;
+
+    @include container;
 }
 
 .reviews__item-author {
-  margin-top: 0;
-  margin-bottom: 30px;
-  font-size: 1.8rem;
-  line-height: 3rem;
-  font-weight: 700;
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 3rem;
+
+    margin-top: 0;
+    margin-bottom: 30px;
 }
 
 .reviews__item-content {
-  font-size: 1.4rem;
-  line-height: 3rem;
-  color: $color-main;
+    font-size: 1.4rem;
+    line-height: 3rem;
+
+    color: $color-main;
 }
 
-.reviews-btn-1:checked ~ .slider__controls label[for="reviews-btn-1"] {
-  @include slider-label-checked;
+.reviews-btn-1:checked ~ .slider__controls label[for='reviews-btn-1'] {
+    @include slider-label-checked;
 }
 
-.reviews-btn-2:checked ~ .slider__controls label[for="reviews-btn-2"] {
-  @include slider-label-checked;
+.reviews-btn-2:checked ~ .slider__controls label[for='reviews-btn-2'] {
+    @include slider-label-checked;
 }
 
-.reviews-btn-3:checked ~ .slider__controls label[for="reviews-btn-3"] {
-  @include slider-label-checked;
+.reviews-btn-3:checked ~ .slider__controls label[for='reviews-btn-3'] {
+    @include slider-label-checked;
 }
 
 .reviews-btn-1:checked ~ .slider__inner .slider__item:nth-child(1) {
-  display: block;
+    display: block;
 }
 
 .reviews-btn-2:checked ~ .slider__inner .slider__item:nth-child(2) {
-  display: block;
+    display: block;
 }
 
 .reviews-btn-3:checked ~ .slider__inner .slider__item:nth-child(3) {
-  display: block;
+    display: block;
 }
