--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -1,51 +1,61 @@
 .slider {
-  position: relative;
-  padding-bottom: 50px;
-  input[type="radio"] {
-    display: none;
-  }
+    position: relative;
+
+    padding-bottom: 50px;
+
+    input[type='radio'] {
+        display: none;
+    }
 }
 
 .slider__controls {
-  list-style: none;
-  padding: 0;
-  line-height: 12px;
-  font-size: 0;
+    font-size: 0;
+    line-height: 12px;
+
+    padding: 0;
+
+    list-style: none;
 }
 
 .slider__controls-item {
-  display: inline-block;
-  vertical-align: middle;
-  width: 6px;
-  height: 6px;
-  margin-right: 13px;
-  background-color: $color-main;
-  opacity: 0.3;
-  border: 3px solid #ffffff;
-  border-radius: 50%;
-  
-  &:last-child {
-    margin-right: 0;
-  }
+    display: inline-block;
+
+    width: 6px;
+    height: 6px;
+    margin-right: 13px;
+
+    vertical-align: middle;
+
+    opacity: 0.3;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    background-color: $color-main;
+
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 .slider__inner {
-  @include container;
+    @include container;
 }
 
 .slider__controls {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  width: 62px;
-  height: 12px;
-  /**/
-  outline: 1px solid red;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    width: 62px;
+    height: 12px;
+    margin: 0 auto;
+    /**/
+
+    outline: 1px solid red;
 }
 
 .slider__item {
-  display: none;
-  min-height: 240px;
+    display: none;
+
+    min-height: 240px;
 }
