--- a/sass/blocks/socials.scss
+++ b/sass/blocks/socials.scss
@@ -1,28 +1,36 @@
 .socials {
-  @include container;
-  padding: 0;
-  width: 177px;
-  list-style: none;
-  min-height: 51px;
-  line-height: 51px;
-  font-size: 0;
+    font-size: 0;
+    line-height: 51px;
+
+    width: 177px;
+    min-height: 51px;
+    padding: 0;
+
+    list-style: none;
+
+    @include container;
+    text-align: center;
 }
 
 .socials__item {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 12px;
-  
-  &:last-child {
-    margin-right: 0;
-  }
-  a {
-    display: block;
-    width: 45px;
-    height: 45px;
-    border: 3px solid $color-main;
-    opacity: 0.1;
-    border-radius: 50%;
-  }
-}
+    display: inline-block;
 
+    margin-right: 12px;
+
+    vertical-align: middle;
+
+    &:last-child {
+        margin-right: 0;
+    }
+
+    a {
+        display: block;
+
+        width: 45px;
+        height: 45px;
+
+        opacity: 0.1;
+        border: 3px solid $color-main;
+        border-radius: 50%;
+    }
+}
