--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -1,34 +1,37 @@
 @mixin container {
   width: 280px;
-  margin-left: auto;
   margin-right: auto;
+  margin-left: auto;
 }
 
 @mixin clearfix {
-  
+
   &::after {
-    content: "";
     display: table;
     clear: both;
+
+    content: '';
   }
 }
 
 @mixin slider-label-checked {
-  background-color: #ffffff;
-  border-color: $color-main;
   opacity: 1;
+  border-color: $color-main;
+  background-color: #fff;
 }
 
 @mixin btn-form {
-  min-height: 63px;
-  line-height: 63px;
-  text-align: center;
-  vertical-align: middle;
   font-size: 1.8rem;
   font-weight: 700;
-  line-height: 3.0rem;
-  color: #ffffff;
+  line-height: 63px;
+
+  min-height: 63px;
+
+  text-align: center;
+  vertical-align: middle;
   text-transform: uppercase;
+
+  color: #fff;
   border: none;
   border-radius: 2px;
   background-color: $color-green;
