--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -20,9 +20,9 @@ $color-green: #2aab6d;
 /**/
 
 $html-size-base: 10px;
-$font-size:1.4rem;
-$line-height:2.4rem;
-$font-family: "OpenSans", Arial, sans-serif;
+$font-size: 1.4rem;
+$line-height: 2.4rem;
+$font-family: 'OpenSans', Arial, sans-serif;
 
 /**/
 
