--- a/sass/blocks/contest-popup.scss
+++ b/sass/blocks/contest-popup.scss
@@ -5,10 +5,10 @@
 
   display: none;
 
-  width: $screen-sm;
+  width: $screen-mobile;
   margin: 0 auto;
   margin-top: -190px;
-  margin-left: -$screen-sm/2;
+  margin-left: -$screen-mobile/2;
   padding-top: 42px;
   padding-bottom: 52px;
 
