--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -1,5 +1,5 @@
 .page-header {
-  min-width: $screen-sm;
+  min-width: $screen-mobile;
   margin: 0 auto;
   /**/
 
@@ -8,7 +8,7 @@
 }
 
 .page-header__img {
-  width: $screen-sm;
+  width: $screen-mobile;
   height: 392px;
   margin: 0 auto;
 
