--- a/sass/global/base.scss
+++ b/sass/global/base.scss
@@ -7,7 +7,7 @@ html {
   font-size: $font-size;
   line-height: $line-height;
 
-  min-width: $screen-sm;
+  min-width: $screen-mobile;
 
   color: $color-main;
 }
