--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -27,4 +27,9 @@ $font-family: 'OpenSans', Arial, sans-serif;
 /**/
 
 $screen-xs: 0;
-$screen-sm: 320px;
+$screen-mobile: 320px;
+$screen-tablet: 700px;
+$screen-large: 1200px;
+
+/**/
+
