--- a/sass/global/temp.scss
+++ b/sass/global/temp.scss
@@ -31,6 +31,11 @@
   outline: 1px solid orange;
 }
 
+.main-menu__items{
+  /*outline: 1px solid white;*/
+
+}
+
 @mixin range-control {
   width: 100%;
 
