--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -2,6 +2,12 @@
   width: 280px;
   margin-right: auto;
   margin-left: auto;
+  @media (min-width: $screen-tablet) {
+    width: 620px;
+  }
+  @media (min-width: $screen-large) {
+    width: 940px;
+  }
 }
 
 @mixin clearfix {
