--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -22,7 +22,7 @@ $color-green: #2aab6d;
 $html-size-base: 10px;
 $font-size: 1.4rem;
 $line-height: 2.4rem;
-$font-family: 'OpenSans', Arial, sans-serif;
+$font-family: "OpenSans", Arial, sans-serif;
 
 /**/
 
@@ -33,3 +33,6 @@ $screen-large: 1200px;
 
 /**/
 
+$container-mobile: 280px;
+$container-tablet: 620px;
+$container-large: 940px;
