--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -54,3 +54,51 @@
     text-transform: uppercase;
   }
 }
+
+.contacts__map {
+  height: 200px;
+}
+
+@media (min-width: $screen-tablet) {
+
+  .contacts__items {
+    font-size: 0;
+  }
+
+  .contacts__item {
+    display: inline-block;
+
+    width: 50%;
+
+    vertical-align: top;
+  }
+
+  .contacts__map {
+    height: 380px;
+  }
+}
+
+@media (min-width: $screen-large) {
+
+  .contacts__items {
+    @include clearfix;
+  }
+
+  .contacts__item {
+    float: left;
+
+    width: 32%;
+  }
+
+  .contacts__item--phone {
+    float: left;
+  }
+
+  .contacts__item--email {
+    float: right;
+  }
+
+  .contacts__map {
+    height: 500px;
+  }
+}
