--- a/sass/blocks/downloads.scss
+++ b/sass/blocks/downloads.scss
@@ -3,13 +3,10 @@
 }
 
 .downloads__inner {
+  width: $container-mobile;
+  margin: 0 auto;
   padding-top: 28px;
   padding-bottom: 35px;
-  /**/
-
-  outline: 1px dashed white;
-
-  @include container;
 }
 
 .downloads__btn {
@@ -91,4 +88,21 @@
   text-align: center;
 
   color: #fff;
+}
+
+@media (min-width: $screen-tablet) {
+
+  .downloads {
+    float: left;
+  }
+
+  .downloads__inner {
+    width: 300px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .downloads__btn {
+    width: 294px;
+  }
 }
