--- a/sass/global/temp.scss
+++ b/sass/global/temp.scss
@@ -1,13 +1,57 @@
+.container {
+  outline: 1px dotted red;
+}
+
 .logo-plain {
   opacity: 0.5;
   outline: 1px solid red;
   background-color: antiquewhite;
 }
 
+.page-header {
+  outline: 2px dotted yellow;
+  background-color: #2c394a;
+}
+
+.page-header__content {
+  outline: 1px solid red;
+  background-color: rgba(150,150,20,0.3);
+}
+
 .downloads__icon {
   opacity: 0.3;
   outline: 1px solid white;
   background: orange;
+}
+
+.downloads__inner {
+  outline: 1px dashed white;
+}
+
+.features__inner {
+  outline: 1px solid green;
+  background-color: bisque;
+}
+
+.features__img {
+  background-color: #c11350;
+}
+
+.features__extra-img {
+  background-color: #dedede;
+}
+
+.features__item {
+  outline: 1px solid blue;
+}
+
+.features__item-img {
+  opacity: 0.5;
+  background-color: blue;
+}
+
+.price-table__option {
+  background-color: pink;
 }
 
 .user-photos__post {
@@ -31,9 +75,8 @@
   outline: 1px solid orange;
 }
 
-.main-menu__items{
+.main-menu__items {
   /*outline: 1px solid white;*/
-
 }
 
 @mixin range-control {
