--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -1,12 +1,14 @@
 @mixin container {
-  width: 280px;
+  width: $container-mobile;
   margin-right: auto;
   margin-left: auto;
+
+  outline: 1px dotted red;
   @media (min-width: $screen-tablet) {
-    width: 620px;
+    width: $container-tablet;
   }
   @media (min-width: $screen-large) {
-    width: 940px;
+    width: $container-large;
   }
 }
 
