--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,7 @@
 @import "blocks/features.scss";
 @import "blocks/reviews.scss";
 @import "blocks/slider.scss";
-@import "blocks/price.scss";
+@import "blocks/price-table.scss";
 @import "blocks/contacts.scss";
 @import "blocks/user-post.scss";
 @import "blocks/new-photo.scss";
